# tiktok-content-generator-multi-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
knowledge/: user_preference.txt
output/: report.md  report2.md
src/tiktok_content_generator_multi_agent/: crew.py  main.py
src/tiktok_content_generator_multi_agent/config/: agents.yaml  tasks.yaml
src/tiktok_content_generator_multi_agent/tools/: custom_tool.py
