[project]
name = "tiktok_content_generator_multi_agent"
version = "0.1.0"
description = "tiktok_content_generator_multi_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
tiktok_content_generator_multi_agent = "tiktok_content_generator_multi_agent.main:run"
run_crew = "tiktok_content_generator_multi_agent.main:run"
train = "tiktok_content_generator_multi_agent.main:train"
replay = "tiktok_content_generator_multi_agent.main:replay"
test = "tiktok_content_generator_multi_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
